Rename the 'module_name' key in module description JSON files
...to 'name'.
It's clear from the context that this is the name of a module.

Change-Id: I07700a4413ceb12695c153e16d0a2dcded615d11
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit d756f4753eaf87755624a53c1e361d11f571fbd9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>

--- a/cmake/ModuleDescription.json.in
+++ b/cmake/ModuleDescription.json.in
@@ -1,5 +1,5 @@
 {
-    "module_name": "${target}",
+    "name": "${target}",
     "version": "${PROJECT_VERSION}",
     "built_with": {${extra_build_information}
         "compiler_id": "${CMAKE_CXX_COMPILER_ID}",
