tests: add timeout for the dbus test message
The test message sent to the dbus might never see a reply, e.g. in case
of a misconfigured dbus. Instead of waiting for a reply and stopping the
static top-level build, timeout after the CI had enough time to receive
the dbus message (5 seconds).

Change-Id: Ic6d60e7d1ddb2d864dc4a78d4edbd0ef7b6604c2
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>

--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -64,6 +64,7 @@ if (QT_FEATURE_dbus)
     set(run_dbus_tests ON)
     if(NOT CMAKE_CROSSCOMPILING AND TARGET Qt::DBus)
         execute_process(COMMAND dbus-send --session --type=signal / local.AutotestCheck.Hello
+            TIMEOUT 5
             RESULT_VARIABLE dbus_session_test
             OUTPUT_QUIET ERROR_QUIET)
         if(NOT "${dbus_session_test}" STREQUAL "0")
