CMake: Store the plugin types in the module json files
This will be read by windeployqt.

Pick-to: 6.5
Change-Id: I8dfebae755ef61967e924db3c5631af5cc4e2440
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>

--- a/cmake/ModuleDescription.json.in
+++ b/cmake/ModuleDescription.json.in
@@ -1,6 +1,7 @@
 {
     "name": "${target}",
-    "version": "${PROJECT_VERSION}",
+    "repository": "${lower_case_project_name}",
+    "version": "${PROJECT_VERSION}",${extra_module_information}
     "built_with": {${extra_build_information}
         "compiler_id": "${CMAKE_CXX_COMPILER_ID}",
         "compiler_target": "${CMAKE_CXX_COMPILER_TARGET}",
