Revert "coin: Build qmake examples in non-qtbase repos"
This reverts commit 3cb32187978d401b01e079d86605f5a7ae1477e8.

Reason for revert: Breaks in qtdeclarative

Change-Id: Iefe2954826bca80ebb2aecb8e8d8367290c218d0
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/coin/instructions/qmake_examples/build_qmake_examples_instructions.yaml
+++ b/coin/instructions/qmake_examples/build_qmake_examples_instructions.yaml
@@ -21,11 +21,7 @@ instructions:
         - condition: runtime
           env_var: COIN_CMAKE_ARGS
           contains_value: "QT_BUILD_EXAMPLES=ON"
-        # host case
+        # covers all cases for UseConfigure configs
         - condition: runtime
-          env_var: CONFIGURE_ARGS
-          contains_value: "-make examples"
-        # target case
-        - condition: runtime
-          env_var: TARGET_CONFIGURE_ARGS
+          env_var: COIN_CONFIGURE_ARGS
           contains_value: "-make examples"
