CMake: Remove qmake conversion markers from gui/CMakeLists.txt
The 'special case' markers were used by the conversion tool. Now
that the .pro files are gone, we can get rid of them.

This is also true for other comments that refer to the .pro file.

Change-Id: I973e9b2647ecf49137209b7fed2f13b213c0bbe9
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -1,13 +1,6 @@
 # Copyright (C) 2022 The Qt Company Ltd.
 # SPDX-License-Identifier: BSD-3-Clause
 
-# Generated from gui.pro.
-
-#####################################################################
-## Gui Module:
-#####################################################################
-
-# special case begin
 qt_find_package(X11_XCB)
 qt_find_package(WrapHarfbuzz PROVIDED_TARGETS WrapHarfbuzz::WrapHarfbuzz)
 qt_find_package(WrapPNG PROVIDED_TARGETS WrapPNG::WrapPNG)
@@ -51,13 +44,11 @@ if(QT_FEATURE_opengl)
     list(APPEND qmake_module_config opengl)
 endif()
 
-# special case end
-
 qt_internal_add_module(Gui
     PLUGIN_TYPES accessiblebridge platforms platforms/darwin xcbglintegrations platformthemes platforminputcontexts generic iconengines imageformats egldeviceintegrations
-    FEATURE_DEPENDENCIES  # special case:
-        Qt::Network # special case:
-    QMAKE_MODULE_CONFIG "${qmake_module_config}" # special case
+    FEATURE_DEPENDENCIES
+        Qt::Network
+    QMAKE_MODULE_CONFIG "${qmake_module_config}"
     SOURCES
         accessible/qaccessible.h
         accessible/qplatformaccessibility.h
@@ -269,7 +260,7 @@ qt_internal_add_module(Gui
     DEFINES
         QT_NO_FOREACH
         QT_NO_USING_NAMESPACE
-        QT_QPA_DEFAULT_PLATFORM_NAME="${QT_QPA_DEFAULT_PLATFORM}" # special case
+        QT_QPA_DEFAULT_PLATFORM_NAME="${QT_QPA_DEFAULT_PLATFORM}"
     INCLUDE_DIRECTORIES
         ../3rdparty/VulkanMemoryAllocator
     LIBRARIES
@@ -278,8 +269,8 @@ qt_internal_add_module(Gui
         Qt::Core
     PRIVATE_MODULE_INTERFACE
         Qt::CorePrivate
-    NO_PCH_SOURCES # special case
-        "painting/qdrawhelper.cpp" # special case
+    NO_PCH_SOURCES
+        "painting/qdrawhelper.cpp"
     PRECOMPILED_HEADER
         "kernel/qt_gui_pch.h"
     GENERATE_CPP_EXPORTS
@@ -318,21 +309,11 @@ if(QT_FEATURE_reduce_relocations AND UNIX AND GCC)
                         "LINKER:--dynamic-list=${CMAKE_CURRENT_LIST_DIR}/QtGui.dynlist")
 endif()
 
-# special case begin
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_standarditemmodel
     SOURCES
         itemmodels/qstandarditemmodel.cpp itemmodels/qstandarditemmodel.h itemmodels/qstandarditemmodel_p.h
 )
-# special case end
 
-
-#### Keys ignored in scope 1:.:.:gui.pro:<TRUE>:
-# QMAKE_LIBS = "$$QMAKE_LIBS_GUI"
-
-## Scopes:
-#####################################################################
-
-# special case begin
 # With qmake, gui's opengl.pri used CONFIG += opengl, where opengl.prf
 # used direct public linkage against either libGLESv2 or libGL, depending
 # on the opengl _feature_. This is done by hand now here (where the
@@ -355,7 +336,6 @@ if(QT_FEATURE_opengl)
         target_link_libraries(Gui PUBLIC WrapOpenGL::WrapOpenGL)
     endif()
 endif()
-# special case end
 
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_opengl
     SOURCES
@@ -369,9 +349,6 @@ qt_internal_extend_target(Gui CONDITION QT_FEATURE_opengl
         rhi/qrhigles2.cpp rhi/qrhigles2_p.h
         rhi/qrhigles2_p_p.h
 )
-
-#### Keys ignored in scope 2:.:.:gui.pro:QT_FEATURE_opengl:
-# MODULE_CONFIG = "opengl"
 
 qt_internal_extend_target(Gui CONDITION MACOS
     SOURCES
@@ -436,60 +413,18 @@ qt_internal_extend_target(Gui CONDITION WIN32
         dcomp
 )
 
-#### Keys ignored in scope 7:.:.:gui.pro:WIN32:
-# CMAKE_WINDOWS_BUILD = "True"
-
-# special case begin
 if(QT_FEATURE_egl)
     qt_find_package(EGL)
 endif()
-# special case end
 
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_egl
     SOURCES
         opengl/platform/egl/qeglconvenience.cpp opengl/platform/egl/qeglconvenience_p.h
         opengl/platform/egl/qeglstreamconvenience.cpp opengl/platform/egl/qeglstreamconvenience_p.h
         opengl/platform/egl/qt_egl_p.h
-# special case begin
     LIBRARIES
-        EGL::EGL # special case
-# special case end
+        EGL::EGL
 )
-
-#### Keys ignored in scope 8:.:.:gui.pro:QT_FEATURE_egl:
-# CMAKE_EGL_LIBS = "$$cmakeProcessLibs($$QMAKE_LIBS_EGL)"
-
-#### Keys ignored in scope 9:.:.:gui.pro:NOT QMAKE_LIBDIR_EGL_ISEMPTY:
-# CMAKE_EGL_LIBDIR = "$$cmakeTargetPath($$QMAKE_LIBDIR_EGL)"
-
-#### Keys ignored in scope 10:.:.:gui.pro:QT_FEATURE_opengles2:
-# CMAKE_GL_HEADER_NAME = "GLES2/gl2.h"
-# CMAKE_OPENGL_INCDIRS = "$$cmakePortablePaths($$QMAKE_INCDIR_OPENGL_ES2)"
-# CMAKE_OPENGL_LIBS = "$$cmakeProcessLibs($$QMAKE_LIBS_OPENGL_ES2)"
-# CMAKE_QT_OPENGL_IMPLEMENTATION = "GLESv2"
-
-#### Keys ignored in scope 11:.:.:gui.pro:NOT QMAKE_INCDIR_OPENGL_ES2_ISEMPTY:
-# CMAKE_GL_INCDIRS = "$$cmakeTargetPaths($$QMAKE_INCDIR_OPENGL_ES2)"
-
-#### Keys ignored in scope 12:.:.:gui.pro:NOT QMAKE_LIBDIR_OPENGL_ES2_ISEMPTY:
-# CMAKE_OPENGL_LIBDIR = "$$cmakePortablePaths($$QMAKE_LIBDIR_OPENGL_ES2)"
-
-#### Keys ignored in scope 14:.:.:gui.pro:QT_FEATURE_opengl:
-# CMAKE_GL_HEADER_NAME = "GL/gl.h"
-# CMAKE_OPENGL_INCDIRS = "$$cmakePortablePaths($$QMAKE_INCDIR_OPENGL)"
-# CMAKE_QT_OPENGL_IMPLEMENTATION = "GL"
-
-#### Keys ignored in scope 15:.:.:gui.pro:NOT QMAKE_INCDIR_OPENGL_ISEMPTY:
-# CMAKE_GL_INCDIRS = "$$cmakeTargetPaths($$QMAKE_INCDIR_OPENGL)"
-
-#### Keys ignored in scope 16:.:.:gui.pro:NOT QT_FEATURE_dynamicgl:
-# CMAKE_OPENGL_LIBS = "$$cmakeProcessLibs($$QMAKE_LIBS_OPENGL)"
-
-#### Keys ignored in scope 17:.:.:gui.pro:NOT QMAKE_LIBDIR_OPENGL_ISEMPTY:
-# CMAKE_OPENGL_LIBDIR = "$$cmakePortablePaths($$QMAKE_LIBDIR_OPENGL)"
-
-#### Keys ignored in scope 18:.:.:gui.pro:APPLE:
-# CMAKE_GL_HEADER_NAME = "gl.h"
 
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_accessibility
     SOURCES
@@ -539,7 +474,6 @@ qt_internal_extend_target(Gui CONDITION atspi_accessibility
         accessible/linux/qspiaccessiblebridge.cpp accessible/linux/qspiaccessiblebridge_p.h
         accessible/linux/qspiapplicationadaptor.cpp accessible/linux/qspiapplicationadaptor_p.h
         accessible/linux/qspidbuscache.cpp accessible/linux/qspidbuscache_p.h
-# special case begin
     DBUS_ADAPTOR_SOURCES
         accessible/linux/dbusxml/Cache.xml
         accessible/linux/dbusxml/DeviceEventController.xml
@@ -550,7 +484,6 @@ qt_internal_extend_target(Gui CONDITION atspi_accessibility
         accessible/linux/dbusxml/Socket.xml
     DBUS_INTERFACE_FLAGS
         "-i" "QtGui/private/qspi_struct_marshallers_p.h"
-# special case end
 )
 
 if(atspi_accessibility)
@@ -590,9 +523,6 @@ qt_internal_extend_target(Gui CONDITION QT_FEATURE_png
     LIBRARIES
         WrapPNG::WrapPNG
 )
-
-#### Keys ignored in scope 40:.:image:image/image.pri:WIN32 AND MINGW:
-# GCC_VERSION = "$${QMAKE_GCC_MAJOR_VERSION}.$${QMAKE_GCC_MINOR_VERSION}.$${QMAKE_GCC_PATCH_VERSION}"
 
 qt_internal_extend_target(Gui CONDITION ((QT_FEATURE_png) AND (WIN32 AND MINGW)) AND (GCC_VERSION___equals___8.1.0)
     COMPILE_OPTIONS
@@ -658,7 +588,7 @@ qt_internal_extend_target(Gui CONDITION ANDROID
         platform/android/qandroidnativeinterface.cpp
 )
 
-qt_internal_extend_target(Gui CONDITION ANDROID AND (TEST_architecture_arch STREQUAL arm64 OR TEST_architecture_arch STREQUAL arm) # special case
+qt_internal_extend_target(Gui CONDITION ANDROID AND (TEST_architecture_arch STREQUAL arm64 OR TEST_architecture_arch STREQUAL arm)
     SOURCES
         image/qimage_neon.cpp
         painting/qdrawhelper_neon.cpp painting/qdrawhelper_neon_p.h
@@ -676,14 +606,12 @@ qt_internal_extend_target(Gui CONDITION ANDROID AND (TEST_architecture_arch STRE
         QT_COMPILER_SUPPORTS_SSSE3 QT_COMPILER_SUPPORTS_SSSE3
 )
 
-# special case begin
 if (MINGW AND CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 8.1.0)
   # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=86048
   set_source_files_properties(image/qpnghandler.cpp
     PROPERTIES COMPILE_OPTIONS -fno-reorder-blocks-and-partition
   )
 endif()
-# special case end
 
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_harfbuzz
     SOURCES
@@ -692,15 +620,10 @@ qt_internal_extend_target(Gui CONDITION QT_FEATURE_harfbuzz
         WrapHarfbuzz::WrapHarfbuzz
 )
 
-# special case begin
-# Replicate what src/3rdparty/harfbuzz-ng/harfbuzz-ng.pro does, which is link CoreText
-# when targeting uikit.
-
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_harfbuzz AND UIKIT
     LIBRARIES
         ${FWCoreText}
 )
-# special case end
 
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_textodfwriter
     SOURCES
@@ -789,12 +712,12 @@ qt_internal_extend_target(Gui CONDITION QT_FEATURE_direct2d AND QT_FEATURE_direc
     SOURCES
         text/windows/qwindowsdirectwritefontdatabase.cpp text/windows/qwindowsdirectwritefontdatabase_p.h
     LIBRARIES
-        dwrite # special case
+        dwrite
 )
 
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_direct2d AND QT_FEATURE_directwrite AND WIN32 AND NOT QT_FEATURE_directwrite3
     LIBRARIES
-        dwrite # special case
+        dwrite
 )
 
 qt_internal_extend_target(Gui CONDITION MINGW AND WIN32
@@ -903,8 +826,6 @@ if(QT_FEATURE_vulkan)
         Gui WrapVulkanHeaders::WrapVulkanHeaders)
 endif()
 
-#### Keys ignored in scope 111:.:vulkan:vulkan/vulkan.pri:QT_FEATURE_vkgen:
-# special case begin
 # We must always generate syncqt-injected header files,
 # because we added a custom command earlier for those for framework builds.
 set(vulkan_fun "qvulkanfunctions.h")
@@ -955,29 +876,6 @@ add_custom_command(
     WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
     VERBATIM
 )
-# special case end
-
-#### Keys ignored in scope 68:.:vulkan:vulkan/vulkan.pri:QT_FEATURE_vkgen:
-# QMAKE_EXTRA_COMPILERS = "qvkgen_h" "qvkgen_ph" "qvkgen_pimpl"
-# QMAKE_QVKGEN_INPUT = "vulkan/vk.xml"
-# QMAKE_QVKGEN_LICENSE_HEADER = "$$QT_SOURCE_TREE/header.LGPL"
-# qvkgen_h.commands = "$$QMAKE_QVKGEN" "${QMAKE_FILE_IN}" "$$shell_quote($$QMAKE_QVKGEN_LICENSE_HEADER)" "${QMAKE_FILE_OUT_PATH}/${QMAKE_FILE_OUT_BASE}"
-# qvkgen_h.input = "QMAKE_QVKGEN_INPUT"
-# qvkgen_h.output = "$$OUT_PWD/vulkan/qvulkanfunctions.h"
-# qvkgen_ph.commands = "$$escape_expand(\\n)"
-# qvkgen_ph.depends = "$$OUT_PWD/vulkan/qvulkanfunctions.h"
-# qvkgen_ph.input = "QMAKE_QVKGEN_INPUT"
-# qvkgen_ph.output = "$$OUT_PWD/vulkan/qvulkanfunctions_p.h"
-# qvkgen_pimpl.commands = "$$escape_expand(\\n)"
-# qvkgen_pimpl.depends = "$$OUT_PWD/vulkan/qvulkanfunctions_p.h"
-# qvkgen_pimpl.input = "QMAKE_QVKGEN_INPUT"
-# qvkgen_pimpl.output = "$$OUT_PWD/vulkan/qvulkanfunctions_p.cpp"
-
-#### Keys ignored in scope 112:.:vulkan:vulkan/vulkan.pri:QT_FEATURE_vulkan:
-# qvkgen_h.variable_out = "HEADERS"
-
-#### Keys ignored in scope 113:.:vulkan:vulkan/vulkan.pri:else:
-# qvkgen_h.CONFIG = "target_predeps" "no_link"
 
 qt_internal_extend_target(Gui CONDITION WASM
     SOURCES
@@ -1044,10 +942,8 @@ qt_internal_extend_target(Gui CONDITION QT_FEATURE_xkbcommon AND UNIX
         platform/unix/qxkbcommon_3rdparty.cpp
     LIBRARIES
         XKB::XKB
-# special case begin
     PRIVATE_MODULE_INTERFACE
         XKB::XKB
-# special case end
 )
 
 qt_internal_extend_target(Gui CONDITION IOS OR MACOS
@@ -1058,7 +954,7 @@ qt_internal_extend_target(Gui CONDITION IOS OR MACOS
         ${FWMetal}
 )
 
-qt_internal_extend_target(Gui # special case CONDITION NOT GCC OR NOT QT_COMPILER_VERSION_MAJOR STREQUAL 5 # source subtraction gone wrong
+qt_internal_extend_target(Gui
     SOURCES
         painting/qdrawhelper.cpp painting/qdrawhelper_neon_p.h
     NO_PCH_SOURCES
@@ -1077,6 +973,4 @@ qt_internal_add_docs(Gui
     doc/qtgui.qdocconf
 )
 
-# special case begin
 qt_internal_add_optimize_full_flags()
-# special case end
