Return qt-configure-module to bin/
We agreed that qt-configure-module needs to come back to bin/ as it's
user-facing.

Amends d77ce33082516234fd7bbb5335401a1f3af8ca27

[ChangeLog][CMake] Upon further consideration, qt-configure-module
was deemed user-facing, and was thus moved back to ./bin on
all platforms.

Task-number: QTBUG-107621
Change-Id: I1f7874436e5b3988242091fc0303ea828f29d5c6
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/coin/instructions/prepare_configure_module_executable.yaml
+++ b/coin/instructions/prepare_configure_module_executable.yaml
@@ -12,7 +12,7 @@ instructions:
     instructions:
       - type: EnvironmentVariable
         variableName: CONFIGURE_EXECUTABLE
-        variableValue: "{{.InstallDir}}{{.Env.INSTALL_DIR_SUFFIX}}{{.Env.CI_PATH_SEP}}libexec{{.Env.CI_PATH_SEP}}qt-configure-module"
+        variableValue: "{{.InstallDir}}{{.Env.INSTALL_DIR_SUFFIX}}{{.Env.CI_PATH_SEP}}bin{{.Env.CI_PATH_SEP}}qt-configure-module"
         disable_if:
           condition: property
           property: host.os
