Slow Deprecation of FILENAME_VARIABLE, replacement by OUTPUT_SCRIPT
As discussed in the latest CMake API Review, we are deprecating the
FILENAME_VARIABLE variable name everywhere, and replacing it with
OUTPUT_SCRIPT.

[ChangeLog][CMake] The FILENAME_VARIABLE option of
qt_generate_deploy_script and qt_generate_deploy_app_script is now
deprecated, use OUTPUT_SCRIPT option instead.

Change-Id: Ic8be33eefbc48540166ea0fcf1d1948b052d4b8a
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>

--- a/tests/auto/cmake/test_widgets_app_deployment/CMakeLists.txt
+++ b/tests/auto/cmake/test_widgets_app_deployment/CMakeLists.txt
@@ -33,7 +33,7 @@ function(create_test_executable target)
 
     qt_generate_deploy_app_script(
         TARGET ${target}
-        FILENAME_VARIABLE deploy_script
+        OUTPUT_SCRIPT deploy_script
         # Don't fail at configure time on unsupported platforms
         NO_UNSUPPORTED_PLATFORM_ERROR
     )
