Enable shared library build of Qt for iOS
As of f68e2c92cc0ed2c1929140402c061359bc2363a5, and its follow up
changes, we can now link individual plugins statically, even if the
Qt build is generally a shared build.

This allows us to build Qt for iOS as shared libraries, while still
keeping the platform plugin as a static library, since this is
harder to port over to a shared library.

This gives the benefit of faster turnaround during development, as
well as binary compatibility promises for the main Qt libraries,
without having to go fully shared for all of Qt.

Static builds are still the default, due to the downsides of larger
application bundles and slower load times for shared builds.

For now the user has to manually tick the "Embed & Sign" check
box in Xcode for each Qt library, which is only available with
Xcode projects generated by the qmake Xcode generator.

Task-number: QTBUG-85974
Change-Id: Id2b7bd2823c8e7c79068dda95295b574ada8d7f2
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>

--- a/src/plugins/platforms/ios/CMakeLists.txt
+++ b/src/plugins/platforms/ios/CMakeLists.txt
@@ -9,6 +9,7 @@
 
 qt_internal_add_plugin(QIOSIntegrationPlugin
     OUTPUT_NAME qios
+    STATIC # Force static, even in shared builds
     DEFAULT_IF ${QT_QPA_DEFAULT_PLATFORM} MATCHES ios # special case
     PLUGIN_TYPE platforms
     SOURCES
@@ -36,6 +37,7 @@ qt_internal_add_plugin(QIOSIntegrationPlugin
         ${FWMetal}
         ${FWQuartzCore}
         ${FWUIKit}
+        ${FWCoreGraphics}
         Qt::CorePrivate
         Qt::GuiPrivate
 )
