QTextImageHandler: Add test coverage for resources and URLs
If an image source in HTML is specified via local file name or resource
path (i.e. without qrc prefix), then the correct image is loaded.

With file:/ or qrc:/ schema however, the image is either not loaded at
all, or the 2x image is not loaded. The qt_findAtNxFile helper in
qicon.cpp gets a URL path, but expects a file path (that can be tested
with QFile::exists).

Task-number: QTBUG-109212
Change-Id: Ibcf687c69b3e53a10f21d718d28c8177a02d6be6
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit c9cf4037cafe22aa20cfea6efe1c6a4c7211d21f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>

--- a/tests/auto/gui/text/qtextimagehandler/CMakeLists.txt
+++ b/tests/auto/gui/text/qtextimagehandler/CMakeLists.txt
@@ -14,3 +14,10 @@ qt_internal_add_test(tst_qtextimagehandler
     TESTDATA
         ${test_data}
 )
+
+qt_internal_add_resource(tst_qtextimagehandler "qtextimagehandler"
+    PREFIX
+        "/"
+    FILES
+        ${test_data}
+)
