Add QString<->emscripten::val conversion functions
Following the QRect, add functions converting the QString to native
emscripten::val and back: fromJsString, toJsString

Change-Id: I2d0625ede3bbf7249e2e91b8de298b5b91df8ba2
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>

--- a/tests/auto/corelib/text/qstring/CMakeLists.txt
+++ b/tests/auto/corelib/text/qstring/CMakeLists.txt
@@ -9,6 +9,9 @@ if(APPLE)
     list(APPEND tst_qstring_extra_libraries ${FWFoundation})
     list(APPEND tst_qstring_extra_sources tst_qstring_mac.mm)
 endif()
+if(WASM)
+    list(APPEND tst_qstring_extra_sources tst_qstring_wasm.cpp)
+endif()
 
 foreach(test tst_qstring tst_qstring_restricted_ascii)
     qt_internal_add_test(${test}
