Change the RUNTIME_OUTPUT_DIRECTORY for configure-time executables
Set the RUNTIME_OUTPUT_DIRECTORY for configure-time executables so
executable will be located inside the QT_BUILD_DIR. This allows to
re-build syncqt and make sure ithat ts binary is replaced and located
in the libexec directory.

Comment on how to rebuild syncqt. Configure-time tools reserve the
original tool name for the imported executable. To re-build syncqt use
'syncqt_build' target.

Task-number: QTBUG-109792
Change-Id: Id7d912b1d75d18d82cb2a69fbd62b89440120d78
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>

--- a/cmake/QtConfigureTimeExecutableCMakeLists.txt.in
+++ b/cmake/QtConfigureTimeExecutableCMakeLists.txt.in
@@ -6,6 +6,7 @@ set(packages "@packages@")
 set(defines @defines@)
 set(compile_options @compile_options@)
 set(link_options @link_options@)
+set(output_directory @output_directory@)
 
 foreach(package IN LISTS packages)
     find_package(${package} REQUIRED)
@@ -14,6 +15,7 @@ endforeach()
 add_executable(@configure_time_target@ @win32@ @macosx_bundle@ @sources@)
 set_target_properties(@configure_time_target@ PROPERTIES
     INCLUDE_DIRECTORIES "@include_directories@"
+    RUNTIME_OUTPUT_DIRECTORY "${output_directory}"
 )
 
 target_compile_options(@configure_time_target@ PRIVATE ${compile_options})
