Change the RUNTIME_OUTPUT_DIRECTORY for configure-time executables
Set the RUNTIME_OUTPUT_DIRECTORY for configure-time executables so
executable will be located inside the QT_BUILD_DIR. This allows to
re-build syncqt and make sure ithat ts binary is replaced and located
in the libexec directory.

Comment on how to rebuild syncqt. Configure-time tools reserve the
original tool name for the imported executable. To re-build syncqt use
'syncqt_build' target.

Task-number: QTBUG-109792
Change-Id: Id7d912b1d75d18d82cb2a69fbd62b89440120d78
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 6f7d09677a0759328bd27388c320ff60b45c6aff)
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/tools/syncqt/CMakeLists.txt
+++ b/src/tools/syncqt/CMakeLists.txt
@@ -20,6 +20,8 @@ if(CMAKE_OSX_ARCHITECTURES)
     set(osx_architectures "-DCMAKE_OSX_ARCHITECTURES:STRING=${CMAKE_OSX_ARCHITECTURES}")
 endif()
 qt_get_tool_target_name(target_name syncqt)
+# Note: configure-time tools reserve the original tool name for the imported executable.
+# To re-build syncqt use 'syncqt_build' target.
 qt_internal_add_configure_time_tool(${target_name}
     DEFINES ${compile_definitions}
     COMPILE_OPTIONS ${optimize_full_flags}
