Move q20::remove_cvref to q20type_traits.h
The original is defined in <type_traits>, not <functional>.

Pick-to: 6.5
Change-Id: I596e56f64d2eed609ad2f7e6f03ae006afaa2fa9
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -104,6 +104,7 @@ qt_internal_add_module(Core
         global/q20algorithm.h
         global/q20functional.h
         global/q20iterator.h
+        global/q20type_traits.h
         global/q23functional.h
         global/qxpfunctional.h
         global/qxptype_traits.h
