Disable feature vkgen if vulkan was explicitly disabled
Fixes: QTBUG-110066
Change-Id: Id53071c71e40b1f1968075686144835c39eafd6d
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>

--- a/src/gui/configure.json
+++ b/src/gui/configure.json
@@ -1363,6 +1363,7 @@
         "vkgen": {
             "label": "vkgen",
             "condition": "features.xmlstreamreader",
+            "disable": "input.vulkan == 'no'",
             "output": [ "privateFeature" ]
         },
         "vulkan": {
