Fix CMakeLists.txt of Style Plugin Example (broken on macOS)
Add TARGET instruction in property setter, used in debug mode on macOS.

Task-number: QTBUG-107842
Task-number: QTBUG-109227
Change-Id: I8704b7009c36ea8ddbf8773abfaf2b5f34f728ac
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/widgets/tools/styleplugin/plugin/CMakeLists.txt
+++ b/examples/widgets/tools/styleplugin/plugin/CMakeLists.txt
@@ -10,7 +10,7 @@ qt_add_plugin(simplestyleplugin
 #! [0]
 
 if(QT_FEATURE_debug AND APPLE)
-    set_property(simplestyleplugin
+    set_property(TARGET simplestyleplugin
        APPEND_STRING PROPERTY OUTPUT_NAME "_debug")
 endif()
 
