Fix the broken test after the retirement of qt_parse_all_arguments
As we are now processing the arguments with
cmake_parse_arguments(PARSE_ARGV, we don't need to pass the escape
characters anymore.

Task-number: QTBUG-99238
Change-Id: Iea9cda4fe0ae56043cc4d7db29ce53d9d737d645
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>

--- a/tests/manual/qdesktopservices/CMakeLists.txt
+++ b/tests/manual/qdesktopservices/CMakeLists.txt
@@ -11,7 +11,7 @@ qt_internal_add_manual_test(tst_manual_qdesktopservices
     SOURCES
         tst_qdesktopservices.cpp
     DEFINES
-        SRCDIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/\\\"
+        SRCDIR="${CMAKE_CURRENT_SOURCE_DIR}/"
     LIBRARIES
         Qt::Gui
         Qt::Test
